--- a/allo/Run_Example.ipynb
+++ b/allo/Run_Example.ipynb
@@ -6,6 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")\n",
+    "\n",
     "import time\n",
     "import json\n",
     "import datetime\n",
@@ -15,22 +18,23 @@
     "from data.mongo_storage import MongoStorage\n",
     "from engine.single_interval_allocator import SingleIntervalAllocator\n",
     "from engine.rebalancer import Rebalancer\n",
-    "\n",
+    "from engine.replicator import Replicator\n",
+    "from allocator.custom_allocate import get_df_combined_from_rs_list\n",
     "from helper.yaml import load_yaml   \n",
     "\n",
     "single_config = load_yaml('example_single_config.yaml')\n",
     "rebal_config = load_yaml('example_rebalancer_config.yaml')\n",
+    "replicator_config = load_yaml('example_replicator_config.yaml')\n",
     "\n",
     "# from rebalance.single_simulation import PortfolioSimulation\n",
     "# from rebalance.full_simulation import FullPortfolioSimulation, StatisticalTest\n",
     "# from simulation.run_multiprocessing import run_simulation\n",
     "# from google.google_sheet import get_settings, get_gworksheet, worksheet_to_pandas\n",
-    "\n",
     "# import task.google_task as gt\n",
     "\n",
     "MS = MongoStorage()\n",
-    "id_list = MS.Find(id_only=True)\n",
-    "series_list = MS.Load(id_list[0])\n",
+    "id_list = MS.Find(replicator_config[\"find_filter\"], id_only=True)\n",
+    "rs_list = MS.Load(id_list)\n",
     "coll = MS.client[\"AnalysisEvo\"][\"Strategy\"]"
    ]
   },
@@ -43,15 +47,38 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "CPU times: user 321 ms, sys: 7.91 ms, total: 329 ms\n",
-      "Wall time: 332 ms\n"
+      "CPU times: user 328 ms, sys: 12.4 ms, total: 340 ms\n",
+      "Wall time: 345 ms\n"
      ]
     }
    ],
    "source": [
     "%%time \n",
     "p = SingleIntervalAllocator(**single_config)\n",
-    "track_df, excluded = p.get_output()"
+    "track_df, excluded, forward_df = p.get_output(subset = False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from data_parser import load_parse\n",
+    "td = load_parse.get(\"trpei\")\n",
+    "# td()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %%time\n",
+    "# p = Rebalancer(**rebal_config)\n",
+    "# output, fdf = p.get_output()\n",
+    "# fdf[\"pcret\"].plot()"
    ]
   },
   {
@@ -61,7 +88,9 @@
    "outputs": [],
    "source": [
     "%%time\n",
-    "p = Rebalancer(**rebal_config)"
+    "p = Replicator(**replicator_config)\n",
+    "output, fdf = p.get_output()\n",
+    "# fdf[\"pcret\"].plot()s"
    ]
   },
   {
@@ -70,207 +99,31 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "output = p.get_output()"
+    "p.get_weights()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Name</th>\n",
-       "      <th>StartDate</th>\n",
-       "      <th>OOSDate</th>\n",
-       "      <th>EndDate</th>\n",
-       "      <th>_id</th>\n",
-       "      <th>weight_0</th>\n",
-       "      <th>weight</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>EEM</td>\n",
-       "      <td>2003-04-14</td>\n",
-       "      <td>2019-10-27</td>\n",
-       "      <td>2020-02-24</td>\n",
-       "      <td>5dbbe7cd74ad1582ecf03582</td>\n",
-       "      <td>0.056320</td>\n",
-       "      <td>0.056320</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>EFA</td>\n",
-       "      <td>2001-08-20</td>\n",
-       "      <td>2019-10-27</td>\n",
-       "      <td>2020-02-24</td>\n",
-       "      <td>5dbbe7cd74ad1582ecf03584</td>\n",
-       "      <td>0.087781</td>\n",
-       "      <td>0.087781</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>EURUSD</td>\n",
-       "      <td>2000-01-05</td>\n",
-       "      <td>2019-10-28</td>\n",
-       "      <td>2020-02-25</td>\n",
-       "      <td>5dbbe7ce74ad1582ecf03586</td>\n",
-       "      <td>0.150677</td>\n",
-       "      <td>0.150677</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>GBPUSD</td>\n",
-       "      <td>2000-01-05</td>\n",
-       "      <td>2019-10-28</td>\n",
-       "      <td>2020-02-25</td>\n",
-       "      <td>5dbbe7ce74ad1582ecf03588</td>\n",
-       "      <td>0.095936</td>\n",
-       "      <td>0.095936</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>GLD</td>\n",
-       "      <td>2004-11-19</td>\n",
-       "      <td>2019-10-27</td>\n",
-       "      <td>2020-02-24</td>\n",
-       "      <td>5dbbe7ce74ad1582ecf0358a</td>\n",
-       "      <td>0.084900</td>\n",
-       "      <td>0.084900</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>JNK</td>\n",
-       "      <td>2007-12-05</td>\n",
-       "      <td>2019-10-27</td>\n",
-       "      <td>2020-02-24</td>\n",
-       "      <td>5dbbe7ce74ad1582ecf0358e</td>\n",
-       "      <td>0.138016</td>\n",
-       "      <td>0.138016</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>SPY</td>\n",
-       "      <td>2000-01-05</td>\n",
-       "      <td>2019-10-27</td>\n",
-       "      <td>2020-02-24</td>\n",
-       "      <td>5dbbe7ce74ad1582ecf03590</td>\n",
-       "      <td>0.109326</td>\n",
-       "      <td>0.109326</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>TLT</td>\n",
-       "      <td>2002-07-29</td>\n",
-       "      <td>2019-10-27</td>\n",
-       "      <td>2020-02-24</td>\n",
-       "      <td>5dbbe7ce74ad1582ecf03592</td>\n",
-       "      <td>0.084022</td>\n",
-       "      <td>0.084022</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>USDJPY</td>\n",
-       "      <td>2000-01-05</td>\n",
-       "      <td>2019-10-28</td>\n",
-       "      <td>2020-02-25</td>\n",
-       "      <td>5dbbe7ce74ad1582ecf03594</td>\n",
-       "      <td>0.091937</td>\n",
-       "      <td>0.091937</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>10</th>\n",
-       "      <td>USO</td>\n",
-       "      <td>2006-04-11</td>\n",
-       "      <td>2019-10-27</td>\n",
-       "      <td>2020-02-24</td>\n",
-       "      <td>5dbbe7ce74ad1582ecf03596</td>\n",
-       "      <td>0.029342</td>\n",
-       "      <td>0.029342</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>12</th>\n",
-       "      <td>XIV</td>\n",
-       "      <td>2004-03-30</td>\n",
-       "      <td>2017-12-21</td>\n",
-       "      <td>2018-06-19</td>\n",
-       "      <td>5dbbe7cf74ad1582ecf0359a</td>\n",
-       "      <td>0.020126</td>\n",
-       "      <td>0.020126</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>13</th>\n",
-       "      <td>ZIV</td>\n",
-       "      <td>2004-03-29</td>\n",
-       "      <td>2019-10-27</td>\n",
-       "      <td>2020-02-24</td>\n",
-       "      <td>5dbbe7cf74ad1582ecf0359c</td>\n",
-       "      <td>0.051616</td>\n",
-       "      <td>0.051616</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      Name  StartDate    OOSDate    EndDate                       _id  \\\n",
-       "0      EEM 2003-04-14 2019-10-27 2020-02-24  5dbbe7cd74ad1582ecf03582   \n",
-       "1      EFA 2001-08-20 2019-10-27 2020-02-24  5dbbe7cd74ad1582ecf03584   \n",
-       "2   EURUSD 2000-01-05 2019-10-28 2020-02-25  5dbbe7ce74ad1582ecf03586   \n",
-       "3   GBPUSD 2000-01-05 2019-10-28 2020-02-25  5dbbe7ce74ad1582ecf03588   \n",
-       "4      GLD 2004-11-19 2019-10-27 2020-02-24  5dbbe7ce74ad1582ecf0358a   \n",
-       "6      JNK 2007-12-05 2019-10-27 2020-02-24  5dbbe7ce74ad1582ecf0358e   \n",
-       "7      SPY 2000-01-05 2019-10-27 2020-02-24  5dbbe7ce74ad1582ecf03590   \n",
-       "8      TLT 2002-07-29 2019-10-27 2020-02-24  5dbbe7ce74ad1582ecf03592   \n",
-       "9   USDJPY 2000-01-05 2019-10-28 2020-02-25  5dbbe7ce74ad1582ecf03594   \n",
-       "10     USO 2006-04-11 2019-10-27 2020-02-24  5dbbe7ce74ad1582ecf03596   \n",
-       "12     XIV 2004-03-30 2017-12-21 2018-06-19  5dbbe7cf74ad1582ecf0359a   \n",
-       "13     ZIV 2004-03-29 2019-10-27 2020-02-24  5dbbe7cf74ad1582ecf0359c   \n",
-       "\n",
-       "    weight_0    weight  \n",
-       "0   0.056320  0.056320  \n",
-       "1   0.087781  0.087781  \n",
-       "2   0.150677  0.150677  \n",
-       "3   0.095936  0.095936  \n",
-       "4   0.084900  0.084900  \n",
-       "6   0.138016  0.138016  \n",
-       "7   0.109326  0.109326  \n",
-       "8   0.084022  0.084022  \n",
-       "9   0.091937  0.091937  \n",
-       "10  0.029342  0.029342  \n",
-       "12  0.020126  0.020126  \n",
-       "13  0.051616  0.051616  "
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "output[8][\"track_df\"]"
+    "fdf[\"pcret\"].plot()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
